--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ body
 }
 
 
-.flex-card
-{
-	margin: 3% 0%;
-	display: flex;
-	flex-wrap: nowrap;
-	justify-content: center;
+.flex-card {
+    margin: 3% 0%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .card
